--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "jest-haste-map": "^24.0.0",
     "map": "^1.0.1",
     "native-base": "^2.12.0",
