--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "axios": "^0.18.0",
     "jest-haste-map": "^24.0.0",
     "map": "^1.0.1",
+    "moment": "^2.24.0",
     "native-base": "^2.12.0",
     "prop-types": "^15.7.2",
     "react": "16.6.3",
-    "react-native": "^0.58.5",
+    "react-native": "^0.58.6",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-maps": "^0.23.0",
     "react-native-swiper": "^1.5.14",
