--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "prop-types": "^15.7.2",
     "react": "16.6.3",
     "react-native": "^0.58.6",
+    "react-native-elements": "^1.1.0",
+    "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "^1.0.16",
+    "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
     "react-native-swiper": "^1.5.14",
+    "react-native-touchable-scale": "^2.0.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.1",
