--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "native-base": "^2.12.0",
     "prop-types": "^15.7.2",
     "react": "16.6.3",
+    "react-addons-update": "^15.6.2",
     "react-native": "^0.58.6",
     "react-native-elements": "^1.1.0",
     "react-native-fbsdk": "^0.8.0",
@@ -33,7 +34,8 @@
     "babel-jest": "24.1.0",
     "jest": "24.1.0",
     "metro-react-native-babel-preset": "0.52.0",
-    "react-test-renderer": "16.6.3"
+    "react-test-renderer": "16.6.3",
+    "redux-logger": "^3.0.6"
   },
   "jest": {
     "preset": "react-native"
