--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-google-places')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-fbsdk')
     implementation project(':react-native-gesture-handler')
