--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "^1.0.16",
+    "react-native-google-places": "^2.5.2",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
     "react-native-swiper": "^1.5.14",
