--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.2.1",
     "axios": "^0.18.0",
     "jest-haste-map": "^24.0.0",
     "map": "^1.0.1",
@@ -15,7 +16,7 @@
     "prop-types": "^15.7.2",
     "react": "16.6.3",
     "react-addons-update": "^15.6.2",
-    "react-native": "^0.58.6",
+    "react-native": "^0.59.1",
     "react-native-elements": "^1.1.0",
     "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "^1.0.16",
