--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "TransUtama",
-  "displayName": "Trans Utama"
+  "name": "TransUtamaRentalApp",
+  "displayName": "Trans Utama Rental App"
 }
