--- a/ios/TransUtamaRentalApp/Info.plist
+++ b/ios/TransUtamaRentalApp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Trans Utama</string>
+	<string>Trans Utama Rental App</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
