--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,7 +102,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.transutama"
+        applicationId "com.transutama.rental"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -138,10 +138,12 @@ android {
 }
 
 dependencies {
-    implementation project(':@react-native-community_async-storage')
+    implementation project(':react-native-google-places')
     implementation project(':react-native-vector-icons')
+    implementation project(':react-native-maps')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-gesture-handler')
+    implementation project(':@react-native-community_async-storage')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
