--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TransUtama",
+  "name": "TransUtamaRentalApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -18,7 +18,6 @@
     "react-addons-update": "^15.6.2",
     "react-native": "^0.59.1",
     "react-native-elements": "^1.1.0",
-    "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-google-places": "^2.5.2",
     "react-native-linear-gradient": "^2.5.3",
