add screen welcome

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "TransUtamaRentalApp",
-  "displayName": "Trans Utama Rental App"
+  "name": "TransUtamaApp",
+  "displayName": "Trans Utama App"
 }
