downgrade to 0.58.6 to fix react-native-maps

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "TransUtamaApp",
-  "displayName": "Trans Utama App"
+  "name": "TransUtamaRental",
+  "displayName": "Trans Utama Rental"
 }
