--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,22 +2,18 @@
 
 buildscript {
     ext {
-        // buildToolsVersion = "26.0.2"
-        buildToolsVersion = "28.0.3"
+        buildToolsVersion = "28.0.2"
         minSdkVersion = 16
         compileSdkVersion = 28
-        targetSdkVersion = 28
-        supportLibVersion = "26.1.0"
-        googlePlayServicesVersion = "11.8.0"
-        androidMapsUtilsVersion = "0.5+"
+        targetSdkVersion = 27
+        supportLibVersion = "28.0.0"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        //classpath 'com.android.tools.build:gradle:3.3.1'
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -33,9 +29,11 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
-        maven {
-            url "https://maven.google.com"
-        }
-
     }
+}
+
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.7'
+    distributionUrl = distributionUrl.replace("bin", "all")
 }
