--- a/ios/TransUtamaRental.xcodeproj/xcshareddata/xcschemes/TransUtamaRental.xcscheme
+++ b/ios/TransUtamaRental.xcodeproj/xcshareddata/xcschemes/TransUtamaRental.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "TransUtamaApp.app"
-               BlueprintName = "TransUtamaApp"
-               ReferencedContainer = "container:TransUtamaApp.xcodeproj">
+               BuildableName = "TransUtamaRental.app"
+               BlueprintName = "TransUtamaRental"
+               ReferencedContainer = "container:TransUtamaRental.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TransUtamaAppTests.xctest"
-               BlueprintName = "TransUtamaAppTests"
-               ReferencedContainer = "container:TransUtamaApp.xcodeproj">
+               BuildableName = "TransUtamaRentalTests.xctest"
+               BlueprintName = "TransUtamaRentalTests"
+               ReferencedContainer = "container:TransUtamaRental.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TransUtamaAppTests.xctest"
-               BlueprintName = "TransUtamaAppTests"
-               ReferencedContainer = "container:TransUtamaApp.xcodeproj">
+               BuildableName = "TransUtamaRentalTests.xctest"
+               BlueprintName = "TransUtamaRentalTests"
+               ReferencedContainer = "container:TransUtamaRental.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TransUtamaApp.app"
-            BlueprintName = "TransUtamaApp"
-            ReferencedContainer = "container:TransUtamaApp.xcodeproj">
+            BuildableName = "TransUtamaRental.app"
+            BlueprintName = "TransUtamaRental"
+            ReferencedContainer = "container:TransUtamaRental.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TransUtamaApp.app"
-            BlueprintName = "TransUtamaApp"
-            ReferencedContainer = "container:TransUtamaApp.xcodeproj">
+            BuildableName = "TransUtamaRental.app"
+            BlueprintName = "TransUtamaRental"
+            ReferencedContainer = "container:TransUtamaRental.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TransUtamaApp.app"
-            BlueprintName = "TransUtamaApp"
-            ReferencedContainer = "container:TransUtamaApp.xcodeproj">
+            BuildableName = "TransUtamaRental.app"
+            BlueprintName = "TransUtamaRental"
+            ReferencedContainer = "container:TransUtamaRental.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
