--- a/src/data/AndroidManifest.xml
+++ b/src/data/AndroidManifest.xml
@@ -2,6 +2,7 @@
   package="com.transutama.rental">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
       android:name=".MainApplication"
@@ -24,6 +25,7 @@
       <meta-data
      android:name="com.google.android.geo.API_KEY"
      android:value="AIzaSyAKl4qWeBABIDPoxo_CHvWuIfgkKoEzS7c"/>
+     <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
 </manifest>
