--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,13 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "28.0.2"
-        minSdkVersion = 16
+        buildToolsVersion = "28.0.3"
+        minSdkVersion = 21
         compileSdkVersion = 28
         targetSdkVersion = 27
         supportLibVersion = "28.0.0"
+        googlePlayServicesVersion = "11.6.2"
+        androidMapsUtilsVersion = "0.5+"
     }
     repositories {
         google()
@@ -28,6 +30,9 @@ allprojects {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
+        }
+        maven {
+            url "https://maven.google.com"
         }
     }
 }
