--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-google-places": "^3.0.0-beta.11",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-swiper": "^1.5.14",
     "react-native-touchable-scale": "^2.0.0",
     "react-native-vector-icons": "^6.3.0",
