--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-linear-gradient')
     implementation project(':react-native-google-places')
     implementation project(':react-native-maps')
     implementation project(':@react-native-community_async-storage')
