--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-google-signin')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-google-places')
     implementation project(':react-native-maps')
@@ -153,6 +154,8 @@ dependencies {
 
 
 }
+
+apply plugin: 'com.google.gms.google-services'
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
