--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-google-places": "^3.0.0-beta.11",
+    "react-native-google-signin": "^1.2.3",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
     "react-native-star-rating": "^1.1.0",
