--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,3 +17,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 RNGP_ANDROID_API_KEY=AIzaSyC-kEXeuhgPWY__PZ9mzePYwJuMwOzLyC0
+MYAPP_RELEASE_STORE_FILE=my-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=anjar123
+MYAPP_RELEASE_KEY_PASSWORD=anjar123
+
