--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-spinkit')
     implementation project(':react-native-google-signin')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-google-places')
