--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
     "react-native-modal": "^10.0.0",
+    "react-native-spinkit": "^1.2.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-swiper": "^1.5.14",
     "react-native-touchable-scale": "^2.0.0",
